test/fail/event-without-action.app
//Property 'onclick' requires an action call, inline action or String expression
application test

  define page root(){
    block[onclick := 83]{"bla"}
  }